--- a/HMM/HMM.vbproj
+++ b/HMM/HMM.vbproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>TalkGenerator</RootNamespace>
+    <RootNamespace>Microsoft.VisualBasic.DataMining.HMM</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
