--- a/Talk/TalkGenerator.vbproj
+++ b/Talk/TalkGenerator.vbproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <RootNamespace>TalkGenerator</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
 </Project>
