config project reference

--- a/HMM/HMM.vbproj
+++ b/HMM/HMM.vbproj
@@ -12,4 +12,8 @@
     <None Remove="Test\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
+  </ItemGroup>
+
 </Project>
