--- a/HMM/Test/Test.vbproj
+++ b/HMM/Test/Test.vbproj
@@ -4,6 +4,7 @@
     <RootNamespace>test</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
