--- a/src/Agent/Agent.vbproj
+++ b/src/Agent/Agent.vbproj
@@ -4,6 +4,7 @@
     <RootNamespace>Agent</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <Configurations>Debug;Release;Rsharp_app_release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
