--- a/src/HMM/HMM.vbproj
+++ b/src/HMM/HMM.vbproj
@@ -4,6 +4,7 @@
     <RootNamespace>Microsoft.VisualBasic.DataMining.HMM</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <Configurations>Debug;Release;Rsharp_app_release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
