--- a/src/HMM/Test/Test.vbproj
+++ b/src/HMM/Test/Test.vbproj
@@ -6,6 +6,7 @@
     <Platforms>AnyCPU;x64</Platforms>
     <OutputType>Exe</OutputType>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <UseApplicationFramework>True</UseApplicationFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
