--- a/src/HMM/Test/Test.vbproj
+++ b/src/HMM/Test/Test.vbproj
@@ -36,8 +36,8 @@
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\Mathematica\Math\Math\Math.NET5.vbproj" />
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\NLP\NLP.NET.vbproj" />
     <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
+    <ProjectReference Include="..\..\Ollama\Ollama.vbproj" />
     <ProjectReference Include="..\..\Talk\TalkGenerator.vbproj" />
-    <ProjectReference Include="..\HMM.vbproj" />
   </ItemGroup>
 
 </Project>
