--- a/src/Agent/Agent.vbproj
+++ b/src/Agent/Agent.vbproj
@@ -50,6 +50,7 @@
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\Mathematica\Math\Math\Math.NET5.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Data_science\NLP\NLP.NET.vbproj" />
     <ProjectReference Include="..\..\..\GCModeller\src\runtime\sciBASIC#\Microsoft.VisualBasic.Core\src\Core.vbproj" />
+    <ProjectReference Include="..\Ollama\Ollama.vbproj" />
     <ProjectReference Include="..\Talk\TalkGenerator.vbproj" />
   </ItemGroup>
 
