--- a/src/Ollama/Ollama.vbproj
+++ b/src/Ollama/Ollama.vbproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <RootNamespace>Ollama</RootNamespace>
     <TargetFramework>net8.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
