--- a/src/Ollama/Ollama.vbproj
+++ b/src/Ollama/Ollama.vbproj
@@ -4,6 +4,7 @@
     <RootNamespace>Ollama</RootNamespace>
     <TargetFramework>net8.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <Configurations>Debug;Release;Rsharp_app_release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
