--- a/src/Ollama/Ollama.vbproj
+++ b/src/Ollama/Ollama.vbproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RootNamespace>Ollama</RootNamespace>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;net48</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <Configurations>Debug;Release;Rsharp_app_release</Configurations>
   </PropertyGroup>
